--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "framer-motion": "^8.3.4",
     "next": "^13.1.1",
     "querystring": "^0.2.1",
@@ -21,6 +22,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "^13.1.1",
+    "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
   }
