--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^8.3.4",
     "next": "^13.1.1",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "sweetalert2": "^11.7.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
